--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~12.2.16",
     "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
+    "@angular/core": "^11.2.14",
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~12.2.16",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
-    "firebase": "^7.19.1",
+    "firebase": "^9.11.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular/cli": "~11.2.19",
+    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular/cli": "^11.2.14",
     "@angular/compiler-cli": "~12.2.16",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
